Final Upload(Beta)

--- a/sources/addMK.ui
+++ b/sources/addMK.ui
@@ -14,7 +14,7 @@
    <string>Add a Mark</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources/res.qrc">
+   <iconset resource="../resources/res.qrc">
     <normaloff>:/imgs/images/window_icon.ico</normaloff>:/imgs/images/window_icon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -199,7 +199,7 @@
   <tabstop>btnInsertMark</tabstop>
  </tabstops>
  <resources>
-  <include location="resources/res.qrc"/>
+  <include location="../resources/res.qrc"/>
  </resources>
  <connections/>
 </ui>
