--- a/sources/about.ui
+++ b/sources/about.ui
@@ -14,7 +14,7 @@
    <string>About Registro</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources/res.qrc">
+   <iconset resource="../resources/res.qrc">
     <normaloff>:/imgs/images/window_icon.ico</normaloff>:/imgs/images/window_icon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -31,7 +31,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="resources/res.qrc">:/imgs/images/about_icon.png</pixmap>
+     <pixmap resource="../resources/res.qrc">:/imgs/images/about_icon.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -113,6 +113,7 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
+  <include location="../resources/res.qrc"/>
   <include location="resources/res.qrc"/>
  </resources>
  <connections/>
