--- a/sources/createDB.ui
+++ b/sources/createDB.ui
@@ -14,7 +14,7 @@
    <string>Create a New Database</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources/res.qrc">
+   <iconset resource="../resources/res.qrc">
     <normaloff>:/imgs/images/window_icon.ico</normaloff>:/imgs/images/window_icon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -218,7 +218,7 @@
   <tabstop>btnAddTeacher</tabstop>
  </tabstops>
  <resources>
-  <include location="resources/res.qrc"/>
+  <include location="../resources/res.qrc"/>
  </resources>
  <connections/>
 </ui>
