--- a/sources/upMK.ui
+++ b/sources/upMK.ui
@@ -14,7 +14,7 @@
    <string>Update a Mark</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources/res.qrc">
+   <iconset resource="../resources/res.qrc">
     <normaloff>:/imgs/images/window_icon.ico</normaloff>:/imgs/images/window_icon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -226,7 +226,7 @@
   <tabstop>btnUpdateMark</tabstop>
  </tabstops>
  <resources>
-  <include location="resources/res.qrc"/>
+  <include location="../resources/res.qrc"/>
  </resources>
  <connections/>
 </ui>
