Made minor changes
- Updated some deprecated code
- Fixed some other bugs
- FIxed some typos

--- a/sources/addMK.ui
+++ b/sources/addMK.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Add a Mark</string>
+   <string>Add a grade</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources/res.qrc">
@@ -61,7 +61,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Mark</string>
+     <string>Grade</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
